--- a/README.rdoc
+++ b/README.rdoc
@@ -19,15 +19,29 @@ JRubyProf supports 5 different profile outputs. You can add "profile=<flat,graph
 * graph_html => HTML
 * tree_html => HTML
 
-== Caveat
-JRubyProf generates files for the profiling information. These files are generated in the current working directory. This middleware doesn't attempt to delete those files after they are generated. That's an exercise left to the user.
+== Caveats
+* JRubyProf generates files for the profiling information. These files are generated in the current working directory. This middleware doesn't attempt to delete those files after they are generated. That's an exercise left to the user.
+* JRubyProf was compiled under Java 1.6. If you don't have that version of the JDK available you will need to recompile danlucraft's jruby-prof.jar on your platform version. If you get an error like "cannot link Java class org.jruby.prof.JRubyProf, probable missing dependency: Bad version number in .class file" it indicates that your version of the JVM is not in sync with jruby-prof. I will NOT attempt to embed jruby-prof in this project.
+
+== Need Help?
+If you need help using this library, or recompiling jruby-prof, just open a ticket in the Issues section of this repository (http://github.com/jacaetevha/rack_jruby_profiling/issues).
+
+== Test
+Wanna run my tests? Cool. You'll need the following. They are all defined in the Gemfile, so if you are using Bundler, you can just
+
+	bundle check
+	bundle install (if need be)
+
+* jruby-prof (Duh?!)
+* rspec
+* rack-test
+* rack
 
 == Note on Patches/Pull Requests
  
 * Fork the project.
 * Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
+* Add tests for it. This is important so I don't break it in a future version unintentionally.
 * Commit, do not mess with rakefile, version, or history.
   (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
 * Send me a pull request. Bonus points for topic branches.
